Added html + image

--- a/index.html
+++ b/index.html
@@ -6,5 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <strong>
+      <hr />
+      <h1>Anna Rudenko</h1>
+    </strong>
+    <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
+    <h2>Designer of kid's toys and nursery decor</h2>
+    <h3><strong> Work Experience </strong></h3>
+    <p>
+      <strong> 2013 - 2019 </strong> Support Team Member at
+      <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
+      <br/>
+      <p> <pre>   Providing an assistance for English speaking customers from all over the Globe. </pre> </p>
+      <br />
+      <strong> 2018 - 2019 </strong> English Academic Writer at
+      <a href="https://www.uvocorp.com/"> UvoCorp </a>
+      🖋️ <br/>
+       <p> <pre>   Writing the warious content, projects, researches, making some copyright texts. </pre> </p>
+      <br />
+    </p>
+    <strong> 2019 - present  </strong> Owner of a small business shop at 
+      <a href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"> Etsy </a>
+      <br/>
+      <p> <pre>  I am designing the nursery decor and kid's toys. 🧸 </pre> </p>
+      <br />
+    </p>
+    <h3>
+      <strong> Skills: </strong>
+    </h3> 
+    <ul>
+      <li> Management </li>
+      <li> Customer Servise  </li>
+      <li> Project Management </li>
+    </ul>
+    <h3> <strong>  Achievements: </strong> </h3>
+    <ol>
+      <li> Completed alot of calls, chats and provided so many assistance. </li>
+      <li> Writed a huge number of projects in English  </li>
+      <li> Finally found my lovely hobby  </li>
+      <li> Created some new designs. Now i want to create the personal web site 😉  </li>
+
+    </ol>
+  </body>
 </html>
