--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
     <h2>Designer of kid's toys and nursery decor</h2>
     <h3><strong> Work Experience </strong></h3>
+    <table>
     <p>
       <strong> 2013 - 2019 </strong> Support Team Member at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
@@ -32,6 +33,7 @@
       <p> <pre>  I am designing the nursery decor and kid's toys. 🧸 </pre> </p>
       <br />
     </p>
+    </table>
     <h3>
       <strong> Skills: </strong>
     </h3> 
