--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2>Designer of kid's toys and nursery decor</h2>
     <h3><strong> Work Experience </strong></h3>
     <table>
+      <tr>
+        <th> Period:</th>
+        <th> Position </th>
+      </tr>
     <p>
       <strong> 2013 - 2019 </strong> Support Team Member at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
