--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
     <h2>Designer of kid's toys and nursery decor</h2>
     <h3><strong> Work Experience </strong></h3>
-    <table>
-      <tr>
-        <th> Period:</th>
-        <th> Position </th>
-      </tr>
+    
     <p>
-      <strong> 2013 - 2019 </strong> Support Team Member at
+      <strong>  </strong> Support Team Member at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
       <br/>
       <p> <pre>   Providing an assistance for English speaking customers from all over the Globe. </pre> </p>
