--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
     <h2>Designer of kid's toys and nursery decor</h2>
     <h3><strong> Work Experience </strong></h3>
-    
+    <table>
+      <thead>
+      <tr>
+        <th> Period:</th>
+      
+        <th> Position </th>
+      </tr>
+      <tr>
+        <td> 2013 - 2019 </td>
+      </tr>
+      </table>
+      </thead>
     <p>
-      <strong>  </strong> Support Team Member at
+      <strong> 2013 - 2019 </strong> Support Team Member at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
       <br/>
       <p> <pre>   Providing an assistance for English speaking customers from all over the Globe. </pre> </p>
@@ -33,7 +44,6 @@
       <p> <pre>  I am designing the nursery decor and kid's toys. 🧸 </pre> </p>
       <br />
     </p>
-    </table>
     <h3>
       <strong> Skills: </strong>
     </h3> 
