--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <tr>
         <td> 2018 - 2019 </td>
-        <td>Support Team Member at
+        <td>English Academic Writer at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> </td>
       </tr>
         <th scope="row"> Description </th>
