--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LessonSeven Making the style with css</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <strong>
-      <hr />
-      <h1>Anna Rudenko</h1>
-    </strong>
+    <hr />
+    <h1>Anna Rudenko</h1>
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
     <h2>Designer of kid's toys and nursery decor</h2>
-    <h3><strong> Work Experience </strong></h3>
+    <h3>Work Experience</h3>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
         <tr>
@@ -62,15 +61,13 @@
       </tbody>
     </table>
 
-    <h3>
-      <strong> Skills: </strong>
-    </h3>
+    <h3>Skills:</h3>
     <ul>
       <li>Management</li>
       <li>Customer Servise</li>
       <li>Project Management</li>
     </ul>
-    <h3><strong> Achievements: </strong></h3>
+    <h3>Achievements:</h3>
     <ol>
       <li>Completed alot of calls, chats and provided so many assistance.</li>
       <li>Writed a huge number of projects in English</li>
