added the borders
added bottom lines at the sections + added the border for picture + padding

--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LessonSeven Making the style with css</title>
+    <title>Lesson8 Making the style with css</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <hr />
-    <h1>Anna Rudenko</h1>
-    <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
+    <div class="lines">
+      <h1>Anna Rudenko</h1>
+    </div>
+    <img
+      class="picture"
+      src="/images/DSC_0056.jpg"
+      alt="picture of me"
+      width="200"
+    />
     <h2>Designer of kid's toys and nursery decor</h2>
-    <h3>Work Experience</h3>
+    <div class="lines"><h3>Work Experience</h3></div>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
         <tr>
@@ -61,20 +68,25 @@
       </tbody>
     </table>
 
-    <h3>Skills:</h3>
-    <ul>
-      <li>Management</li>
-      <li>Customer Servise</li>
-      <li>Project Management</li>
-    </ul>
-    <h3>Achievements:</h3>
-    <ol>
-      <li>Completed alot of calls, chats and provided so many assistance.</li>
-      <li>Writed a huge number of projects in English</li>
-      <li>Finally found my lovely hobby</li>
-      <li>
-        Created some new designs. Now i want to create the personal web site 😉
-      </li>
-    </ol>
+    <div class="lines">
+      <h3>Skills:</h3>
+      <ul>
+        <li>Management</li>
+        <li>Customer Servise</li>
+        <li>Project Management</li>
+      </ul>
+    </div>
+    <div class="lines">
+      <h3>Achievements:</h3>
+      <ol>
+        <li>Completed alot of calls, chats and provided so many assistance.</li>
+        <li>Writed a huge number of projects in English</li>
+        <li>Finally found my lovely hobby</li>
+        <li>
+          Created some new designs. Now i want to create the personal web site
+          😉
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
