css of the table
changed the backround color of the table sections

--- a/index.html
+++ b/index.html
@@ -20,53 +20,55 @@
     />
     <h2>Designer of kid's toys and nursery decor</h2>
     <div class="lines"><h3>Work Experience</h3></div>
-    <table border="1" cellspacing="0" cellpadding="10px">
-      <thead>
-        <tr>
-          <th>Period:</th>
+    <div class="wrapper">
+      <table border="1" cellspacing="0" cellpadding="10px">
+        <thead>
+          <tr>
+            <th>Period:</th>
 
-          <th>Position</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2013 - 2019</td>
-          <td>
-            Support Team Member at
-            <a href="https://www.uvocorp.com/"> UvoCorp </a>
-          </td>
-        </tr>
+            <th>Position</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2013 - 2019</td>
+            <td>
+              Support Team Member at
+              <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            </td>
+          </tr>
 
-        <th scope="row">Description</th>
-        <td>Providing assistance for clients from all ower the Globe.</td>
+          <th scope="row">Description</th>
+          <td>Providing assistance for clients from all ower the Globe.</td>
 
-        <tr>
-          <td>2018 - 2019</td>
+          <tr>
+            <td>2018 - 2019</td>
+            <td>
+              English Academic Writer at
+              <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            </td>
+          </tr>
+          <th scope="row">Description</th>
           <td>
-            English Academic Writer at
-            <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            Writing the warious content, projects, researches, making some
+            copyright texts.
           </td>
-        </tr>
-        <th scope="row">Description</th>
-        <td>
-          Writing the warious content, projects, researches, making some
-          copyright texts.
-        </td>
-        <tr>
-          <td>2019 - present</td>
-          <td>
-            Owner of a small business shop at
-            <a
-              href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
-            >
-              Etsy
-            </a>
-          </td>
-        </tr>
-        <th scope="row" rowspan="2">Description</th>
-        <td>I am designing the nursery decor and kid's toys. 🧸</td>
-      </tbody>
-    </table>
+          <tr>
+            <td>2019 - present</td>
+            <td>
+              Owner of a small business shop at
+              <a
+                href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
+              >
+                Etsy
+              </a>
+            </td>
+          </tr>
+          <th scope="row" rowspan="2">Description</th>
+          <td>I am designing the nursery decor and kid's toys. 🧸</td>
+        </tbody>
+      </table>
+    </div>
 
     <div class="lines">
       <h3>Skills:</h3>
