--- a/index.html
+++ b/index.html
@@ -7,88 +7,94 @@
     <title>Lesson8 Making the style with css</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-  <body>
-    <hr />
-    <div class="lines">
-      <h1>Anna Rudenko</h1>
+    <div class="section1">
+      <div class="lines">
+        <img
+        class="picture"
+        src="/images/DSC_0056.jpg"
+        alt="picture of me"
+        width="200"
+      />
+        <h1>Anna Rudenko</h1>
+      </div>
+      
+      <h2>Designer of kid's toys and nursery decor</h2>
+      
     </div>
-    <img
-      class="picture"
-      src="/images/DSC_0056.jpg"
-      alt="picture of me"
-      width="200"
-    />
-    <h2>Designer of kid's toys and nursery decor</h2>
-    <div class="lines"><h3>Work Experience</h3></div>
-    <div class="wrapper">
-      <table border="1" cellspacing="0" cellpadding="10px">
-        <thead>
-          <tr>
-            <th>Period:</th>
+    <div class="section2">
+      <div class="lines"><h3>Work Experience</h3></div>
+      <div class="wrapper">
+        <table border="1" cellspacing="0" cellpadding="10px">
+          <thead>
+            <tr>
+              <th>Period:</th>
 
-            <th>Position</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>2013 - 2019</td>
+              <th>Position</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2013 - 2019</td>
+              <td>
+                Support Team Member at
+                <a href="https://www.uvocorp.com/"> UvoCorp </a>
+              </td>
+            </tr>
+
+            <th scope="row">Description</th>
+            <td>Providing assistance for clients from all ower the Globe.</td>
+
+            <tr>
+              <td>2018 - 2019</td>
+              <td>
+                English Academic Writer at
+                <a href="https://www.uvocorp.com/"> UvoCorp </a>
+              </td>
+            </tr>
+            <th scope="row">Description</th>
             <td>
-              Support Team Member at
-              <a href="https://www.uvocorp.com/"> UvoCorp </a>
+              Writing the warious content, projects, researches, making some
+              copyright texts.
             </td>
-          </tr>
+            <tr>
+              <td>2019 - present</td>
+              <td>
+                Owner of a small business shop at
+                <a
+                  href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
+                >
+                  Etsy
+                </a>
+              </td>
+            </tr>
+            <th scope="row" rowspan="2">Description</th>
+            <td>I am designing the nursery decor and kid's toys. 🧸</td>
+          </tbody>
+        </table>
+      </div>
 
-          <th scope="row">Description</th>
-          <td>Providing assistance for clients from all ower the Globe.</td>
-
-          <tr>
-            <td>2018 - 2019</td>
-            <td>
-              English Academic Writer at
-              <a href="https://www.uvocorp.com/"> UvoCorp </a>
-            </td>
-          </tr>
-          <th scope="row">Description</th>
-          <td>
-            Writing the warious content, projects, researches, making some
-            copyright texts.
-          </td>
-          <tr>
-            <td>2019 - present</td>
-            <td>
-              Owner of a small business shop at
-              <a
-                href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
-              >
-                Etsy
-              </a>
-            </td>
-          </tr>
-          <th scope="row" rowspan="2">Description</th>
-          <td>I am designing the nursery decor and kid's toys. 🧸</td>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="lines">
-      <h3>Skills:</h3>
-      <ul>
-        <li>Management</li>
-        <li>Customer Servise</li>
-        <li>Project Management</li>
-      </ul>
-    </div>
-    <div class="lines">
-      <h3>Achievements:</h3>
-      <ol>
-        <li>Completed alot of calls, chats and provided so many assistance.</li>
-        <li>Writed a huge number of projects in English</li>
-        <li>Finally found my lovely hobby</li>
-        <li>
-          Created some new designs. Now i want to create the personal web site
-          😉
-        </li>
-      </ol>
+      <div class="lines">
+        <h3>Skills:</h3>
+        <ul>
+          <li>Management</li>
+          <li>Customer Servise</li>
+          <li>Project Management</li>
+        </ul>
+      </div>
+      <div class="lines">
+        <h3>Achievements:</h3>
+        <ol>
+          <li>
+            Completed alot of calls, chats and provided so many assistance.
+          </li>
+          <li>Writed a huge number of projects in English</li>
+          <li>Finally found my lovely hobby</li>
+          <li>
+            Created some new designs. Now i want to create the personal web site
+            😉
+          </li>
+        </ol>
+      </div>
     </div>
   </body>
 </html>
