some css updates

--- a/form.html
+++ b/form.html
@@ -23,10 +23,10 @@
     <form class="contact_form">
       <fieldset>
       <legend>Contact form: </legend> <br/>
-      <label for="email">E-mail:</label>
+      <label for="email">E-mail*:</label>
       <input type="email" id="email" name="email" required />
       <br/>
-      <label for="description"> Description: </label>
+      <label id="message" for="description"> Description: </label>
       <textarea name="comments" rows="5" cols="20"></textarea> <br/>
       <label for="work_type">Work type:</label>
       <select name="work" id="job">
