--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
       <li> Created some new designs. Now i want to create the personal web site 😉  </li>
 
     </ol>
+    <a href="/form.html"> Hire me Form </a>
   </body>
 </html>
