--- a/form.html
+++ b/form.html
@@ -41,6 +41,6 @@
       </fieldset>
     </form>
 
-    <a href="/index.html"> My CV page </a>
+    <a href="index.html"> My CV page </a>
   </body>
 </html>
