--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <strong>
-      <hr />
-      <h1>Anna Rudenko</h1>
-    </strong>
+    <hr />
+    <h1>Anna Rudenko</h1>
+
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
     <h2>Designer of kid's toys and nursery decor</h2>
-    <h3><strong> Work Experience </strong></h3>
+    <h3>Work Experience</h3>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
         <tr>
