Some minor updates

--- a/index.html
+++ b/index.html
@@ -8,73 +8,80 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <hr />
-    <h1>Anna Rudenko</h1>
-    <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
-    <h2>Designer of kid's toys and nursery decor</h2>
-    <h3>Work Experience</h3>
-    <table border="1" cellspacing="0" cellpadding="10px">
-      <thead>
-        <tr>
-          <th>Period:</th>
+    <div class="wrapper">
+      <hr />
+      <h1>Anna Rudenko</h1>
+      <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
+      <h2>Designer of kid's toys and nursery decor</h2>
+      <h3>Work Experience</h3>
+      <table border="1" cellspacing="0" cellpadding="10px">
+        <thead>
+          <tr>
+            <th>Period:</th>
 
-          <th>Position</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2013 - 2019</td>
-          <td>
-            Support Team Member at
-            <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            <th>Position</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2013 - 2019</td>
+            <td>
+              Support Team Member at
+              <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            </td>
+          </tr>
+
+          <th scope="row">Description</th>
+          <td scope="col">
+            Providing assistance for clients from all ower the Globe.
           </td>
-        </tr>
 
-        <th scope="row">Description</th>
-        <td>Providing assistance for clients from all ower the Globe.</td>
-
-        <tr>
-          <td>2018 - 2019</td>
-          <td>
-            English Academic Writer at
-            <a href="https://www.uvocorp.com/"> UvoCorp </a>
+          <tr>
+            <td>2018 - 2019</td>
+            <td>
+              English Academic Writer at
+              <a href="https://www.uvocorp.com/"> UvoCorp </a>
+            </td>
+          </tr>
+          <th scope="row">Description</th>
+          <td scope="col">
+            Writing the warious content, projects, researches, making some
+            copyright texts.
           </td>
-        </tr>
-        <th scope="row">Description</th>
-        <td>
-          Writing the warious content, projects, researches, making some
-          copyright texts.
-        </td>
-        <tr>
-          <td>2019 - present</td>
-          <td>
-            Owner of a small business shop at
-            <a
-              href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
-            >
-              Etsy
-            </a>
+          <tr>
+            <td scope="col">2019 - present</td>
+            <td scope="col">
+              Owner of a small business shop at
+              <a
+                href="https://www.etsy.com/shop/AnnaAndBarbaraToys?ref=profile_header"
+              >
+                Etsy
+              </a>
+            </td>
+          </tr>
+          <th scope="row" rowspan="2">Description</th>
+          <td scope="col">
+            I am designing the nursery decor and kid's toys. 🧸
           </td>
-        </tr>
-        <th scope="row" rowspan="2">Description</th>
-        <td>I am designing the nursery decor and kid's toys. 🧸</td>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
 
-    <h3>Skills:</h3>
-    <ul>
-      <li>Management</li>
-      <li>Customer Servise</li>
-      <li>Project Management</li>
-    </ul>
-    <h3>Achievements:</h3>
-    <ol>
-      <li>Completed alot of calls, chats and provided so many assistance.</li>
-      <li>Writed a huge number of projects in English</li>
-      <li>Finally found my lovely hobby</li>
-      <li>
-        Created some new designs. Now i want to create the personal web site 😉
-      </li>
-    </ol>
+      <h3>Skills:</h3>
+      <ul>
+        <li>Management</li>
+        <li>Customer Servise</li>
+        <li>Project Management</li>
+      </ul>
+      <h3>Achievements:</h3>
+      <ol>
+        <li>Completed alot of calls, chats and provided so many assistance.</li>
+        <li>Writed a huge number of projects in English</li>
+        <li>Finally found my lovely hobby</li>
+        <li>
+          Created some new designs. Now i want to create the personal web site
+          😉
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
