--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3>Work Experience</h3>
     <table border="1" cellspacing="0" cellpadding="10px">
       <thead>
-        <tr>
+        <tr scope="col">
           <th>Period:</th>
 
           <th>Position</th>
