--- a/form.html
+++ b/form.html
@@ -26,9 +26,9 @@
       <label for="email">E-mail*:</label>
       <input type="email" id="email" name="email" required />
       <br/>
-      <label id="message" for="description"> Description: </label>
-      <textarea name="comments" rows="5" cols="20"></textarea> <br/>
-      <label for="work_type">Work type:</label>
+      <label  for="message"> Description: </label>
+      <textarea name="comments" rows="5" cols="20" id="message"></textarea> <br/>
+      <label for="job">Work type:</label>
       <select name="work" id="job">
         <option value="full-time"> Full-time </option>
         <option value="remote"> Remote </option>
@@ -36,7 +36,6 @@
       </select>
       <br/>
       <input type="submit" value="Hire me">
-      
       </label>
       </fieldset>
     </form>
