added basic files
created css
created html
added the grid

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
   </head>
   <body>
-    <strong>
-      <hr />
+    
+      <div class="wrapper">
+       <div class="contacts">
       <h1>Anna Rudenko</h1>
-    </strong>
     <img src="/images/DSC_0056.jpg" alt="picture of me" width="200" />
-    <h2>Designer of kid's toys and nursery decor</h2>
-    <h3><strong> Work Experience </strong></h3>
+    <h2> Contacts </h2>
+
+
+    </div>
+ <div class="information">
+
+ <h2>Designer of kid's toys and nursery decor</h2>
+    <h2> Work Experience </h2>
     <p>
       <strong> 2013 - 2019 </strong> Support Team Member at
       <a href="https://www.uvocorp.com/"> UvoCorp </a> 💻
@@ -48,5 +55,8 @@
       <li> Created some new designs. Now i want to create the personal web site 😉  </li>
 
     </ol>
+ </div>
+   
+    </div>
   </body>
 </html>
