added css to the title

--- a/form.html
+++ b/form.html
@@ -9,9 +9,10 @@
     <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
+    <div class="mainInfo"></div>
     <h1>Hire me</h1>
     <h2>Contact informtion</h2>
-    <table>
+    <table >
       <tr>
         <th>Phone</th>
         <td>(063) 470 0165</td>
@@ -21,9 +22,10 @@
         <td>Ukraine</td>
       </tr>
     </table>
+    </div>
     <form class="contact_form">
       <fieldset>
-      <legend>Contact form: </legend> <br/>
+      <legend class="main_block">Contact form: </legend> <br/>
       <label for="email">E-mail*:</label>
       <input type="email" id="email" name="email" required />
       <br/>
