--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Form for contact</title>
-    <link href="./styles.css" rel="stylesheet">
+    <link href="./formstyles.css" rel="stylesheet">
     <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php"></form>
   </head>
   <body>
