added minor changes

--- a/index.html
+++ b/index.html
@@ -104,5 +104,8 @@
         </p>
       </div>
     </div>
+    <footer>
+      <a class="formpage" href="form.html"> Hire me form </a>
+    </footer>
   </body>
 </html>
