--- a/form.html
+++ b/form.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Form for contact</title>
     <link href="./formstyles.css" rel="stylesheet">
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php"></form>
+    
   </head>
   <body>
     <div class="mainInfo"></div>
     <h1>Hire me</h1>
     
     </div>
-    <form class="contact_form">
+    <form class="contact_form" action="https://formsubmit.co/rudenkoanna1992@gmail.com" method="POST">
       <fieldset>
       <legend class="main_block">Contact form: </legend> <br/>
       <label for="email">E-mail<span class="req">*</span>:</label>
