set the position for footer

--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <div class="mainInfo"></div>
     <h1>Hire me</h1>
     
-    </div>
+    <div class="form-position"> 
     <form class="contact_form" action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c" method="POST">
       <fieldset>
       <legend class="main_block">Contact form: </legend> <br/>
@@ -33,6 +33,7 @@
       </label>
       </fieldset>
     </form>
+    </div>
 <footer>
     <a class="CVpage" href="index.html"> My CV page </a>
     </footer>
