--- a/form.html
+++ b/form.html
@@ -13,10 +13,11 @@
     <div class="mainInfo"></div>
     <h1>Hire me</h1>
     
-    <div class="form-position"> 
+    
     <form class="contact_form" action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c" method="POST">
       <fieldset>
       <legend class="main_block">Contact form: </legend> <br/>
+      <div class="form-position"> 
       <label for="email">E-mail<span class="req">*</span>:</label>
       <input type="email" id="email" name="email" required />
       <br/>
@@ -32,6 +33,7 @@
       <input type="submit" value="Hire me">
       </label>
       </fieldset>
+    </div> 
     </form>
     </div>
 <footer>
