added positioning to CV page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
     </div>
     <footer>
-      <a class="formpage" href="form.html"> Hire me form </a>
+      <a class="formpage" href="hire-me.html"> Hire me form </a>
     </footer>
   </body>
 </html>
