adjusted css file

--- a/index.html
+++ b/index.html
@@ -8,104 +8,111 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="contacts">
-        <div class="name">
-          <h1 style="color: white">Anna</h1>
-          <h1 style="color: rgb(20, 20, 139)">Rudenko</h1>
+    <div class="main-theme">
+      <div class="wrapper">
+        <div class="contacts">
+          <div class="name">
+            <h1 style="color: white">Anna</h1>
+            <h1 style="color: rgb(20, 20, 139)">Rudenko</h1>
+          </div>
+
+          <img src="/images/profile.JPG" alt="picture of me" width="200" />
+          <div class="minor">
+            <h2>Contacts</h2>
+            <hr />
+            <h3>Address</h3>
+            <p>Boryspil Ukraine</p>
+
+            <h3>Phone</h3>
+            <p>063 470 01 65</p>
+
+            <h3>E-mail</h3>
+            <a href="mailto: rudenkoanna1992@gmail.com"
+              >rudenkoanna1992@gmail.com</a
+            >
+
+            <h3>Linkedin</h3>
+            <a
+              href="https://www.linkedin.com/in/anna-rudenko-543540127/?original_referer="
+            >
+              Link to my Linkedin Profile
+            </a>
+
+            <h2>Languages</h2>
+            <hr />
+            <p>Ukrainian</p>
+            <p>English B2</p>
+          </div>
         </div>
-
-        <img src="/images/profile.JPG" alt="picture of me" width="200" />
-        <div class="minor">
-          <h2>Contacts</h2>
-          <hr />
-          <h3>Address</h3>
-          <p>Boryspil Ukraine</p>
-
-          <h3>Phone</h3>
-          <p>063 470 01 65</p>
-
-          <h3>E-mail</h3>
-          <a href="mailto: rudenkoanna1992@gmail.com"
-            >rudenkoanna1992@gmail.com</a
-          >
-
-          <h3>Linkedin</h3>
-          <a
-            href="https://www.linkedin.com/in/anna-rudenko-543540127/?original_referer="
-          >
-            Link to my Linkedin Profile
-          </a>
-
-          <h2>Languages</h2>
-          <hr />
-          <p>Ukrainian</p>
-          <p>English B2</p>
+        <div class="information">
+          <div class="summary">
+            <h2>Summary</h2>
+            <hr />
+            <p>
+              I was the Customer Support Member for more than 5 years. Company
+              that I worked on was the top company at the market. I have
+              obtained the brilliant experience of providing the top notch
+              service to the english speaking clients. At this very moment I am
+              the owner of a small Etsy shop. I am designing the kids toys and
+              nursery decor. Starting from spring 2022 , I started studding the
+              Java Script , HTML, Css.
+            </p>
+          </div>
+          <div class="skills">
+            <h2>Skills:</h2>
+            <hr />
+            <ul>
+              <li>Management</li>
+              <li>Customer Servise</li>
+              <li>Project Management</li>
+              <li>
+                Completed alot of calls, chats and provided so many assistance.
+              </li>
+              <li>Writed a huge number of projects in English</li>
+              <li>Finally found my lovely hobby</li>
+              <li>
+                Created some new designs. Now i want to create the personal web
+                site 😉
+              </li>
+            </ul>
+          </div>
+          <div class="experience">
+            <h2>Work Experience</h2>
+            <hr />
+            <p><strong> Name of employer: </strong> UvoCorp</p>
+            <p><strong> Dates of employment: </strong> 2013 - 2019</p>
+            <p><strong> Job title: </strong> Support Team Member</p>
+            <p>
+              <strong> Project/Role Description: </strong> Providing an
+              assistance for English speaking customers from all over the Globe.
+            </p>
+            <br />
+            <p><strong> Name of employer: </strong> UvoCorp</p>
+            <p><strong> Dates of employment: </strong> 2018 - 2019</p>
+            <p><strong> Job title: </strong> English Academic Writer</p>
+            <p>
+              <strong> Project/Role Description: </strong> Writing the warious
+              content, projects, researches, making some copyright texts.
+            </p>
+          </div>
+          <div class="education">
+            <h2>Education</h2>
+            <hr />
+            <p><strong> Dates of studding: </strong> from 2009 - to 2015</p>
+            <p>
+              <strong> Name of institution: </strong> National Aviation
+              University
+            </p>
+            <p>
+              <strong> Degree and major: </strong> Masters, Radioelectronic
+              Systems and Complexes
+            </p>
+          </div>
         </div>
       </div>
-      <div class="information">
-        <h2>Summary</h2>
-        <hr />
-        <p>
-          I was the Customer Support Member for more than 5 years. Company that
-          I worked on was the top company at the market. I have obtained the
-          brilliant experience of providing the top notch service to the english
-          speaking clients. At this very moment I am the owner of a small Etsy
-          shop. I am designing the kids toys and nursery decor. Starting from
-          spring 2022 , I started studding the Java Script , HTML, Css.
-        </p>
-        <div class="skills">
-          <h2>Skills:</h2>
-          <hr />
-          <ul>
-            <li>Management</li>
-            <li>Customer Servise</li>
-            <li>Project Management</li>
-            <li>
-              Completed alot of calls, chats and provided so many assistance.
-            </li>
-            <li>Writed a huge number of projects in English</li>
-            <li>Finally found my lovely hobby</li>
-            <li>
-              Created some new designs. Now i want to create the personal web
-              site 😉
-            </li>
-          </ul>
-        </div>
-
-        <h2>Work Experience</h2>
-        <hr />
-        <p><strong> Name of employer: </strong> UvoCorp</p>
-        <p><strong> Dates of employment: </strong> 2013 - 2019</p>
-        <p><strong> Job title: </strong> Support Team Member</p>
-        <p>
-          <strong> Project/Role Description: </strong> Providing an assistance
-          for English speaking customers from all over the Globe.
-        </p>
-        <br />
-        <p><strong> Name of employer: </strong> UvoCorp</p>
-        <p><strong> Dates of employment: </strong> 2018 - 2019</p>
-        <p><strong> Job title: </strong> English Academic Writer</p>
-        <p>
-          <strong> Project/Role Description: </strong> Writing the warious
-          content, projects, researches, making some copyright texts.
-        </p>
-        <br />
-
-        <h2>Education</h2>
-        <hr />
-        <p><strong> Dates of studding: </strong> from 2009 - to 2015</p>
-        <p>
-          <strong> Name of institution: </strong> National Aviation University
-        </p>
-        <p>
-          <strong> Degree and major: </strong> Masters, Radioelectronic Systems
-          and Complexes
-        </p>
-      </div>
+      <footer>
+        <a class="formpage" href="hire-me.html"> Hire me form </a>
+      </footer>
     </div>
-    <footer>
-      <a class="formpage" href="hire-me.html"> Hire me form </a>
-    </footer>
   </body>
 </html>
