--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="customstyle.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="main-theme">
+    <div class="my-theme">
       <div class="wrapper">
         <div class="contacts">
           <div class="name">
-            <h1 style="color: white">Anna</h1>
-            <h1 style="color: rgb(20, 20, 139)">Rudenko</h1>
+            <h1 id="name">Anna</h1>
+            <h1 id="surname">Rudenko</h1>
           </div>
 
           <img src="/images/profile.JPG" alt="picture of me" width="200" />
