added @media to css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <h1 id="surname">Rudenko</h1>
           </div>
 
-          <img src="/images/profile.JPG" alt="picture of me" width="200" />
+          <img
+            class="photo"
+            src="/images/profile.JPG"
+            alt="picture of me"
+            width="200"
+          />
           <div class="minor">
             <h2>Contacts</h2>
             <hr />
