made it responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="my-theme">
       <div class="wrapper">
-        <div class="contacts">
+        <div class="sidebar">
           <div class="name">
             <h1 id="name">Anna</h1>
             <h1 id="surname">Rudenko</h1>
@@ -43,14 +43,15 @@
             >
               Link to my Linkedin Profile
             </a>
-
-            <h2>Languages</h2>
-            <hr />
-            <p>Ukrainian</p>
-            <p>English B2</p>
+            <div class="languages">
+              <h2>Languages</h2>
+              <hr />
+              <p>Ukrainian</p>
+              <p>English B2</p>
+            </div>
           </div>
         </div>
-        <div class="information">
+        <div class="main">
           <div class="summary">
             <h2>Summary</h2>
             <hr />
