checking parameters for my theme and for main theme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="my-theme">
+    <div class="main-theme">
       <div class="wrapper">
         <div class="sidebar">
           <div class="name">
