added letter for navigation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             width="200"
           />
           <div class="minor">
-            <h2>Contacts</h2>
+            <section id="a" class="s">
+              <h2><span class="l">A</span>Contacts</h2>
+            </section>
             <hr />
             <h3>Address</h3>
             <p>Boryspil Ukraine</p>
